# restaurant-lab

./: .gitignore  .sql  CMakeLists.txt  vcpkg-configuration.json  vcpkg.json
src/: append.cpp  append.h  dbconnection.cpp  dbconnection.h  dish-order.cpp  dish-order.h  main.cpp  menu.cpp  menu.h  secrets.cpp  secrets.h
